testsuite/tests/dependent/should_fail/T11334b.stderr

T11334b.hs:8:14: error:
    • Cannot default kind variable ‘f0’
      of kind: k0 -> *
      Perhaps enable PolyKinds or add a kind signature
    • In an expression type signature: Proxy 'Compose
      In the expression: Proxy :: Proxy 'Compose
      In an equation for ‘p’: p = Proxy :: Proxy 'Compose

T11334b.hs:8:14: error:
    • Cannot default kind variable ‘g0’
      of kind: k10 -> k0
      Perhaps enable PolyKinds or add a kind signature
    • In an expression type signature: Proxy 'Compose
      In the expression: Proxy :: Proxy 'Compose
      In an equation for ‘p’: p = Proxy :: Proxy 'Compose

T11334b.hs:8:14: error:
    • Cannot default kind variable ‘a0’
      of kind: k10
      Perhaps enable PolyKinds or add a kind signature
    • In an expression type signature: Proxy 'Compose
      In the expression: Proxy :: Proxy 'Compose
      In an equation for ‘p’: p = Proxy :: Proxy 'Compose
